--- a/05-craftsmanWebDesign/01-just쇼핑몰/css/comm.css
+++ b/05-craftsmanWebDesign/01-just쇼핑몰/css/comm.css
@@ -6,18 +6,19 @@
   box-sizing: border-box;
   text-decoration: none;
   line-height: 1.5;
+  /* 폰트 사이즈의 1.5 / 폰트 사이즈 안 넣었으니까 16px */
   color: #222328;
 }
 .wrap {
   width: 1200px;
   margin: 0 auto;
-  background: #fff4e6;
+  background: #f7e1e1;
 }
 .header {
-  height: 100px;
   display: flex;
   justify-content: space-between;
-  background: #dbf2ff;
+  height: 100px;
+  background: #fff;
 }
 .logo {
   display: flex;
@@ -31,17 +32,68 @@
 .gnb .depth1 {
   display: flex;
 }
-.gnb .depth1 li {
-}
-.gnb .depth1 a {
+.gnb .depth1 > li > a {
   display: block;
   height: 100px;
-  padding: 0 30px;
+  padding: 0 50px;
   line-height: 100px;
-  background: #eefaac;
-  border: 1px solid #000;
+  /* background: #eefaac;
+  border: 1px solid #000; */
   text-align: center;
 }
+.gnb .depth1 > li > a:hover {
+  /* background: #4287c2; */
+  border-bottom: 3px solid #4287c2;
+}
+.gnb .depth1:hover .depth2 {
+  /* gnb에 depth1에 마우스오버했을때 depth2를 보이게 */
+  display: block;
+}
+/* nav  depth2 */
 .gnb .depth2 {
-  /* display: none; */
+  display: none;
+  padding: 20px 0;
+  background: #ffffff;
+}
+.gnb .depth2 a {
+  display: block;
+  height: 40px;
+  /* width: 100%; block요소의 기본 값이 100%이므로 안써도 됨*/
+  text-align: center;
+  line-height: 40px;
+  /* 높이값만큼 넣어주기 */
+}
+.gnb .depth2 a:hover {
+  border-bottom: 3px solid #000;
+}
+
+/* slide */
+.slide {
+  overflow: hidden;
+  height: 300px;
+}
+.slide a,
+.slide img {
+  display: block;
+}
+
+/* contents */
+.contents {
+  display: flex;
+  height: 200px;
+  justify-content: space-between;
+  padding: 10px 0px;
+}
+.tabs {
+  width: 340px;
+}
+.bnr {
+  width: 400px;
+}
+.bnr a,
+.bnr img {
+  display: block;
+}
+.goto {
+  width: 340px;
 }
