--- a/05-craftsmanWebDesign/01-just쇼핑몰/css/comm.css
+++ b/05-craftsmanWebDesign/01-just쇼핑몰/css/comm.css
@@ -11,13 +11,11 @@
 .wrap {
   width: 1200px;
   margin: 0 auto;
-  background: #f7e1e1;
 }
 .header {
   display: flex;
   justify-content: space-between;
   height: 100px;
-  background: #fff;
 }
 .logo {
   display: flex;
@@ -80,9 +78,82 @@
   justify-content: space-between;
   padding: 10px 0;
 }
-.tabs {
+/* tab */
+.tabs-wrap {
+  position: relative;
+  display: flex;
   width: calc(100% / 2 - 230px);
 }
+.tabs-wrap .tab-item {
+  width: 50%;
+}
+/* 비활성화 tab */
+.tabs-wrap .tab-item .tit {
+  height: 50px;
+  padding-top: 15px;
+  border-bottom: 2px solid #000;
+  background: #bbbbbb;
+  text-align: center;
+  font-size: 16px;
+  box-sizing: border-box;
+}
+/* 활성화 tab*/
+/* .tabs-wrap .tab-item.on .tit보다는 .on으로 작성 */
+.tabs-wrap .on .tit {
+  background: #d4e4f2;
+  color: #333;
+}
+.tabs-wrap .tab-item .cont {
+  display: none;
+  position: absolute;
+  top: 50px;
+  left: 0;
+  right: 0;
+  height: 130px;
+  /* background: #a698b4; */
+}
+.tabs-wrap .on .cont {
+  display: block;
+}
+.lst-bbs {
+  padding-top: 13px;
+}
+.lst-bbs li {
+  display: flex;
+  align-items: center;
+}
+.lst-bbs li::before {
+  content: "";
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  margin-top: -1px;
+  margin-right: 10px;
+  background: #000;
+}
+.lst-bbs li a {
+  display: block;
+  line-height: 2;
+}
+.lst-bbs li a:hover {
+  text-decoration: underline;
+}
+
+/* 갤러리 */
+.lst-gallery {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 5px;
+}
+.lst-gallery li {
+  width: 100px;
+}
+.lst-gallery li p {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .bnr {
   width: 400px;
 }
@@ -109,4 +180,29 @@
   display: block;
   height: 100%;
   background: #ccd5ec;
+}
+
+/* footer */
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+  border-top: 1px solid #d7d7d7;
+}
+.lst-sns {
+  display: flex;
+}
+.lst-sns li {
+  margin-left: 20px;
+}
+.logo-foot a {
+  display: flex;
+  height: 100px;
+  align-items: center;
+}
+.lst-sns a {
+  display: block;
+  height: 100px;
+  line-height: 100px;
 }
