--- a/03-html/css/comm.css
+++ b/03-html/css/comm.css
@@ -1,3 +1,77 @@
-section {
-  background: hsl(19, 71%, 93%);
+@charset "utf-8";
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  box-sizing: border-box;
+  text-decoration: none;
+  line-height: 1.5;
+  color: #333;
 }
+.wrap {
+  width: 1200px;
+  margin: 0 auto;
+  background: #eee;
+}
+header {
+  /* overflow: hidden; */
+  padding: 5px 0;
+  background: rgb(163, 216, 179);
+}
+
+/* header에 가상공간 만들어줌 */
+header::after {
+  content: "";
+  clear: both;
+  display: block;
+}
+header h1 {
+  float: left;
+}
+header nav {
+  float: right;
+}
+header nav ul {
+  padding-top: 10px;
+  background: #34a3ff;
+}
+/* header nav ul에 가상공간 */
+header nav ul::after {
+  content: "";
+  clear: both;
+  display: block;
+}
+header nav li {
+  float: left;
+  margin-left: 30px;
+}
+main {
+  overflow: hidden;
+}
+main .cont {
+  float: left;
+  width: 30%;
+  height: 200px;
+  margin-right: 5%;
+  background: #ffe4e4;
+  border: 1px solid #000;
+}
+main .cont3 {
+  margin-right: 0;
+}
+footer {
+  height: 100px;
+  background: #ffa1a1;
+}
+footer .foot1 {
+  float: left;
+}
+footer .foot2 {
+  text-align: center;
+}
+footer .foot3 {
+  float: right;
+  margin-top: -25px;
+}
+/* float는 left밖에 못 함, flex처럼 못 하고 다 맞춰줘야함 */
+/* flex는 최신기술 */
