--- a/04-css/css/comm.css
+++ b/04-css/css/comm.css
@@ -8,6 +8,11 @@
   line-height: 1.5;
   color: #333;
 }
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: block;
+}
 .wrap {
   width: 1200px;
   margin: 0 auto;
@@ -18,13 +23,6 @@ header {
   padding: 5px 0;
   background: rgb(163, 216, 179);
 }
-
-/* header에 가상공간 만들어줌 */
-header::after {
-  content: "";
-  clear: both;
-  display: block;
-}
 header h1 {
   float: left;
 }
@@ -34,12 +32,6 @@ header nav {
 header nav ul {
   padding-top: 10px;
   background: #34a3ff;
-}
-/* header nav ul에 가상공간 */
-header nav ul::after {
-  content: "";
-  clear: both;
-  display: block;
 }
 header nav li {
   float: left;
