--- a/05-craftsmanWebDesign/01-just쇼핑몰/css/comm.css
+++ b/05-craftsmanWebDesign/01-just쇼핑몰/css/comm.css
@@ -42,28 +42,36 @@
   border: 1px solid #000; */
   text-align: center;
 }
-.gnb .depth1 > li > a:hover {
+.gnb .depth1 > li:hover > a {
   /* background: #e7b882; */
   border-bottom: 5px solid #0060ff;
 }
 .gnb .depth1 > li:last-child .depth2 {
   border-right: 1px solid #000;
 }
+/* gnb 마우스 오버 후  */
 .gnb .depth1:hover .depth2 {
   display: block;
+  height: 160px;
+  /* padding: 10px 0; */
+  border-width: 1px;
 }
 /* nav  depth2 */
+/* gnb 마우스 오버 전  */
 .gnb .depth2 {
+  /* display: none; */
   position: absolute;
   top: 100px;
   left: 0;
   right: 0;
   z-index: 1000;
-  /* display: none; */
-  padding: 20px 0;
+  overflow: hidden;
+  height: 0;
+  /* padding: 0; */
   background: #ffffff;
-  border: 1px solid #000;
+  border: 0px solid #b8b8b8;
   border-right: none;
+  transition: all 0.3s;
 }
 .gnb .depth2 a {
   display: block;
@@ -72,7 +80,9 @@
   line-height: 40px;
 }
 .gnb .depth2 a:hover {
-  border-bottom: 3px solid #000;
+  /* border-bottom: 3px solid #000; */
+  background: #0060ff;
+  color: #fff;
 }
 
 /* slide */
